--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css" />
   <title>Pocetna strana</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <section class="content-pocetna">
+    <header>
+      <h1 class="satisfy-regular">Filip Jankovic</h1>
+    </header>
     <div class="author-section">
       <div class="cover-image">
         <img src="assets/filip naslovna.png" alt="" />
@@ -128,7 +134,6 @@
           </a>
         </div>
       </div>
-
       </div>
     </section>
   </section>
