--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
         <img src="assets/cxz.png" alt="" />
       </div>
       <div class="charity-text">
-        <p class="text-short" style="    margin-left: 316px;">
+        <p class="text-short" >
           Centar Zvezda je udruženje građana koje želi da svojim konkretnim
           delovanjem i akcijama pomogne deci i mladim ljudima u našoj zemlji
           koji ne mogu da ostvare podršku i pomoć na neki drugi način. 
         </p>
-        <p class="text-long" style="margin-left: 316px;">
+        <p class="text-long" >
           U našim
           akcijama mogu učestvovati svi zainteresovani putem svojih
           dobrovoljnih priloga, volontiranja, savetima, upućivanjem na decu i
@@ -105,7 +105,7 @@
           akcijama i njihovim rezultatima, ali i da u sve to uključimo što
           više zainteresovanih pojedinaca,udruženja, institucija.
         </p>
-      <button class="read-more-btn" style="margin-left: 316px;">Procitajte jos</button>
+      <button class="read-more-btn" >Procitajte jos</button>
 
       </div>
     </section>
@@ -114,7 +114,7 @@
     <section class="contact">
       <div class="email">
         <div>
-          <img src="assets/cdnlogo.com_mail-ios.svg" alt="E-Mail adresa: filipjankovic@gmail.com" />
+          <img src="assets/cdnlogo.com_mail-ios.svg" alt="E-Mail adresa: filipjankovic@gmail.com" style="filter: grayscale(1);"/>
         </div>
         <div class="email-text">
           <a href="mailto:example@example.com" style="color: black;">
@@ -126,7 +126,7 @@
       </div>
       <div class="instagram">
         <div>
-          <img src="assets/cdnlogo.com_instagram.svg" alt="" />
+          <img src="assets/cdnlogo.com_instagram.svg" alt="" style="filter: grayscale(1);"/>
         </div>
         <div class="instagram-text"> 
           <a href="www.instagram.com/filipjankovic122" style="color: black;">
