Additional styling on book page

--- a/book.html
+++ b/book.html
@@ -27,20 +27,28 @@
         <div>Poručite Vašu kopiju prateci korake ispod!</div>
         <div class="order-form">
           <div class="order-instructions">
-              <h2>Koraci za naručivanje knjige</h2>
-              <ol>
-                  <li>Uplatite 1200 RSD na račun Centra Zvezda.</li>
-                  <li>Pošaljite e-mail sa dokazom uplate na <a href="mailto:filipjankovicautor@gmail.com">filipjankovicautor@gmail.com</a>.</li>
-                  <li>Mejl mora da sadrži:
-                      <ul>
-                          <li>Ime</li><br>
-                          <li>Prezime</li><br>
-                          <li>Vaš telefon</li><br>
-                          <li>Adresu za dostavu</li><br>
-                          <li>Ukoliko ste uplatili iznos koji može biti za više knjiga, naglasite koliko primeraka želite.</li><br>
-                      </ul>
-                  </li>
-              </ol>
+            <h2>Koraci za naručivanje knjige</h2>
+            <p>
+              Uplatite 1200 RSD na račun Centra Zvezda. <br />Pošaljite e-mail
+              sa dokazom uplate na
+              <a href="mailto:filipjankovicautor@gmail.com"
+                >filipjankovicautor@gmail.com</a
+              ><br />
+            </p>
+            <br />
+
+            Mejl mora da sadrži: <br />
+            <ul>
+              <li>Ime</li>
+              <li>Prezime</li>
+              <li>Vaš telefon</li>
+              <li>Adresu za dostavu</li>
+              <li>
+                Ukoliko ste uplatili iznos koji može biti za više knjiga,
+                naglasite koliko primeraka želite.
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
