--- a/index.html
+++ b/index.html
@@ -110,7 +110,11 @@
       </div>
     </section>
     <hr class="line-splitter" />
-
+    <div id="contactHeader">
+      <h4 style="width: 20%;
+      margin: 0 auto;
+      font-size: 40px;">Kontakt</h4>
+    </div>
     <section class="contact">
       <div class="email">
         <div>
