added return button

--- a/book.html
+++ b/book.html
@@ -7,6 +7,12 @@
     <title>Knjige</title>
   </head>
   <body>
+    <div style="position: relative; right: 240px; top: 40px">
+      <button class="returnButton" onclick="window.location.href='index.html'">
+        Vratite se na pocetnu stranu
+      </button>
+    </div>
+
     <section class="content">
       <div class="book-image">
         <img src="assets/izmedjusvetova.jpg" alt="" />
