--- a/index.html
+++ b/index.html
@@ -4,234 +4,83 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
-  <title>Pocetna strana</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
 </head>
 
 <body>
-  <section class="content-pocetna">
-    <header>
-      <h1 class="satisfy-regular">Filip Jankovic</h1>
-    </header>
-    <div class="author-section">
-      <div class="cover-image">
-        <img src="assets/filip naslovna.png" alt="" />
+  <div class="container">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-wrap="true" data-bs-interval="3000">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
       </div>
-      <div class="description-text">
-
-        <p class="text-short">
-          Filip Janković je mladi pisac čije je prvo delo odmah privuklo pažnju
-          zbog svoje autentičnosti i dubine. Njegova knjiga, koja je u velikoj
-          meri autobiografska, nije samo književni rad, već i manifest njegovog
-          ličnog putovanja. Janković je pisao o temama koje su mu bile bliske,
-          koristeći svoja iskustva i učenja koja je stekao kroz godine
-          istraživanja i introspekcije.
-        </p>
-        <p class="text-long">
-          Svaka stranica njegove knjige odražava
-          trud i predanost koju je uložio u primenu tih principa u svom
-          svakodnevnom životu. Njegov pristup pisanju može se opisati kao
-          "životna praksa" — sve ono što je delio sa čitaocima nije bilo samo
-          teorijsko, već duboko ukorenjeno u njegovom svakodnevnom ponašanju i
-          odlučivanju. Janković je uspeo da transformiše svoje lične izazove i
-          uvide u univerzalne lekcije, pružajući tako svojim čitaocima ne samo
-          priču, već i vodič za lični razvoj. Ovaj metod ne samo da oslikava
-          njegovu posvećenost pisanoj reči, već i njegovu sposobnost da se
-          istinski poveže sa temama o kojima piše.
-        </p>
-        <button class="read-more-btn">Procitajte jos</button>
-
-
-
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="assets/filip naslovna.png" class="mx-auto d-block" alt="..." style="height: 700px;">
+          <div class="carousel-caption d-md-block" style="background-color: lightgray;
+          border-radius: 100px;
+          border: lightgray;
+          width: 20%;
+          margin: 0 auto;">
+            <a href="author.html" style="text-decoration:none; color: black;">
+              <h5>O autoru</h5>
+              <p>Saznajte vise o autoru.</p>
+            </a>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/izmedjusvetova.jpg" class="mx-auto d-block" alt="..." style="height: 700px;">
+          <div class="carousel-caption d-md-block" style="background-color: lightgray;
+          border-radius: 100px;
+          border: lightgray;
+          width: 20%;
+          margin: 0 auto;">
+            <a href="book.html" style="text-decoration:none; color: black;">
+              <h5>Knjiga "Izmedju svetova"</h5>
+              <p>Saznajte vise o knjizi i kako doci do nje.</p>
+            </a>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/cxz.png" class="mx-auto d-block" alt="..." style="height: 700px;">
+          <div class="carousel-caption d-md-block" style="background-color: lightgray;
+          border-radius: 100px;
+          border: lightgray;
+          width: 20%;
+          margin: 0 auto;">
+            <a href="charity.html" style="text-decoration:none; color: black;">
+              <h5>Humanitarni cilj</h5>
+              <p>Saznajte vise o nasem humanitarnom cilju.</p>
+            </a>
+          </div>
+        </div>
       </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" style="background-color: gray;" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" style="background-color: gray;" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-
-
-    <hr class="line-splitter" />
-    <section class="book-section">
-      <div class="book-image">
-        <img src="assets/izmedjusvetova.jpg" alt="" />
-      </div>
-      <div class="description-text-book">
-        <p class="text-short">
-          Uronite u dublje sfere postojanja kroz moćne razgovore sa voljenima koji
-          nastavljaju da žive u našim srcima...<br /><br />
-        </p>
-        <p class="text-long">
-
-          Na rubu stvarnosti, ili bar onoga što tako nazivamo, između ovog sveta i
-          onog koji dolazi posle, leži tajanstveni prostor gde se susreću duše
-          koje su prešle granicu smrti. U ovoj knjizi otvaramo vrata tom
-          nevidljivom svetu i pozivamo vas da zajedno sa nama istražite dubine
-          duše i nepregledne horizonte onoga što dolazi. Kroz reči koje će dopreti
-          do vašeg srca, otkrićete da je komunikacija s dušama umrlih moguća, da
-          ljubav i sećanja prelaze granice vremena i prostora, i da su duše naših
-          voljenih uvek s nama, nevidljivi saputnici na vašem putovanju kroz
-          život. <br /><br />Ova knjiga nije samo putovanje u nepoznato, već i
-          podsetnik na večnu povezanost koja nas sve obuhvata u celinu.
-        </p>
-        <a href="book.html"><button class="read-more-btn-book-link">Saznajte jos o knjizi!</button></a>
-
-
-      </div>
-
-    </section>
-    <hr class="line-splitter" />
-    <section class="charity">
-      <div class="charity-image">
-        <img src="assets/cxz.png" alt="" />
-      </div>
-      <div class="charity-text">
-        <p class="text-short">
-          Centar Zvezda je udruženje građana koje želi da svojim konkretnim
-          delovanjem i akcijama pomogne deci i mladim ljudima u našoj zemlji
-          koji ne mogu da ostvare podršku i pomoć na neki drugi način.
-        </p>
-        <p class="text-long">
-          U našim
-          akcijama mogu učestvovati svi zainteresovani putem svojih
-          dobrovoljnih priloga, volontiranja, savetima, upućivanjem na decu i
-          mlade kojima možemo pomoći.
-          <br />
-          Centar Zvezda je udruženje građana koje je osnovano
-          12.03.2013.godine u Beogradu. Nakon višegodišnjeg angažovanja na
-          podršci i sveobuhvatnoj pomoći deci i mladima koji su bez
-          roditeljskog staranja ili potiču iz izuzetno siromašnih i
-          disfunkcionalnih porodica, odlučili smo da osnujemo udruženje
-          građana sa jasno definisanim ciljevima, transparentno organizovanim
-          akcijama i njihovim rezultatima, ali i da u sve to uključimo što
-          više zainteresovanih pojedinaca,udruženja, institucija.
-        </p>
-        <button class="read-more-btn">Procitajte jos</button>
-
-      </div>
-    </section>
-    <hr class="line-splitter" />
-    <div id="contactHeader">
-      <h4>Kontakt</h4>
-    </div>
-    <section class="contact">
-      <div class="email">
-        <div>
-          <img src="assets/cdnlogo.com_mail-ios.svg" alt="E-Mail adresa: filipjankovic@gmail.com"
-            style="filter: grayscale(1);" />
-        </div>
-        <div class="email-text">
-          <a href="mailto:example@example.com" style="color: black;">
-            E-Mail adresa: filipjankovic@gmail.com
-          </a>
-        </div>
-      </div>
-
-      </div>
-      <div class="instagram">
-        <div>
-          <img src="assets/cdnlogo.com_instagram.svg" alt="" style="filter: grayscale(1);" />
-        </div>
-        <div class="instagram-text">
-          <a href="www.instagram.com/filipjankovic122" style="color: black;">
-            instagram.com/filipjankovic122
-          </a>
-        </div>
-      </div>
-      </div>
-    </section>
-  </section>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
 </body>
-<script src="scripts.js"></script>
-
-</html>
 <style>
-  h4 {
-    width: 20%;margin: 0 auto;font-size: 40px;
-  }
-  @media (max-width: 500px) {
-    body {
-      margin: 0 auto;
-      padding-left: 0px;
-      padding-right: 0px;
-    }
-
-    h1 {
-      width: 550px;
-    margin: 0 auto;
-    font-size: 75px;
-    }
-
-    .author-section {
-      display: block;
-    }
-
-    .description-text {
-      margin-top: 20px;
-    }
-
-    .description-text > .read-more-btn{
-      margin-top: 65px;
-      bottom: 0px;
-    }
-
-    .cover-image img  {
-      margin-left: 29px;
-    }
-
-    .book-section img { 
-      margin-left: 35px;
-
-    }
-
-    .book-section > .description-text-book > a > .read-more-btn-book-link {
-      margin: 0 auto;
-    }
-
-    .book-section > .description-text-book > .text-short {
-      margin-top: 40px;
-    }
-
-    .book-section{
-      display: block;
-    }
-
-    .charity {
-      display: block;
-    }
-
-    .charity-image {
-      margin: 0 auto;
-    }
-
-    .charity-text > .read-more-btn {
-      margin: 0 auto;
-    }
-
-    .charity > .charity-text > .text-short {
-      /*margin-left: 180px; */
-    max-height: 150px;
-    bottom: 20px;
-    margin-left: 0px;
-    }
-
-    .charity > .charity-text > .text-long{
-      left: 0px;
-    width: 100%;
-    position: relative;
-    }
-
-    h4 {
-      width: 35%;
-    margin: 0 auto;
-    font-size: 40px;
-    }
-
-    .contact {
-      display: block;
-    }
-
-    .instagram {
-      margin-left: 0px;
-    }
+  .carousel-indicators li {
+    background-color: red;
   }
 </style>
+
+</html>
